--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
     "@astrojs/starlight": "^0.34.3",
+    "@fontsource/ibm-plex-serif": "^5.2.5",
+    "@fontsource/space-mono": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.8",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
     "astro": "^5.6.1",
-    "sharp": "^0.32.5"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "reading-time": "^1.5.0",
+    "sharp": "^0.32.5",
+    "tailwindcss": "^4.1.8"
   }
 }
