--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/starlight": "^0.34.3",
+    "@astrojs/starlight-tailwind": "^4.0.1",
     "@fontsource/ibm-plex-serif": "^5.2.5",
     "@fontsource/space-mono": "^5.2.5",
     "@tailwindcss/vite": "^4.1.8",
